--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Demo</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <p> Bonjour, voici un test</p>
-    <h1> salut les humains</h1>
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <p>Bonjour, voici un test</p>
+    <h1>salut les humains</h1>
+  </body>
 </html>
